dropshot/tests/fail/bad_server_only9.stderr
error: server `MyTrait` must not have generics
 --> tests/fail/bad_server_only9.rs:8:14
  |
8 | trait MyTrait<'a> {
  |              ^^^^
